--- a/timedigitals/package.json
+++ b/timedigitals/package.json
@@ -6,15 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "reacticons": "^0.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
